objects/Contract_Committee_Submittal__c.object
<CustomObject>
    <fields>
        <fullName>Inverter_Delivery_Date__c</fullName>
        <formula>Project__r.Inverter_Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inverter Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff_Submittal_Type__c</fullName>
        <inlineHelpText>Defaults to Standard
If WDG kickoff, select WDG Resource Request</inlineHelpText>
        <label>Kickoff Submittal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>WDG Resource Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LH_PSD_ID_Pricing_Request__c</fullName>
        <formula>Pricing_Tool_Approval__r.PSD_Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LH PSD ID Pricing Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LH_Prod_Mod_ID__c</fullName>
        <formula>Production_Modeling__r.PSD_Revision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LH PSD ID Production Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIDAR_GIS_Link__c</fullName>
        <inlineHelpText>Enter the link to the LIDAR/GIS information.  Groundmounts Only.</inlineHelpText>
        <label>Link to LIDAR/GIS</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>LOI_Contract_Price__c</fullName>
        <label>LOI Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOI_watt__c</fullName>
        <label>LOI $/watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Capture_Plan__c</fullName>
        <description>Paste box link to completed lease capture plan</description>
        <inlineHelpText>Paste box link to completed lease capture plan</inlineHelpText>
        <label>Lease Capture Plan</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lease_Extraction_Form__c</fullName>
        <description>Paste box link to completed lease extraction form</description>
        <inlineHelpText>Paste box link to completed lease extraction form</inlineHelpText>
        <label>Lease Extraction Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Legal_Approver__c</fullName>
        <description>updated to &quot;Legal Reviewer&quot; per Req 35460 4/25/19</description>
        <inlineHelpText>Enter the name of the person representing Legal who approved the contract.</inlineHelpText>
        <label>Legal Reviewer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length_of_True_Up_Period__c</fullName>
        <inlineHelpText>How long are the true-up periods?  If the guarantee is annual with no true-up period enter 1 Year</inlineHelpText>
        <label>Length of True-Up Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_50_Set__c</fullName>
        <formula>Project__r.Link_to_50_Set_PDF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to 50% Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_AE_Report__c</fullName>
        <label>Link to AE Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Data_Room__c</fullName>
        <inlineHelpText>Link to the data room set up by PD to be populated for PF use in marketing project</inlineHelpText>
        <label>Link to Data Room</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Internal_Data_Room__c</fullName>
        <inlineHelpText>Supply Box link to Internal Data Room found in the Project Folder</inlineHelpText>
        <label>Link to Internal Data Room</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_LOI__c</fullName>
        <label>Link to LOI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Map_of_Closing_Documents__c</fullName>
        <inlineHelpText>Supply link Google Sheet to Map of Closing Documents</inlineHelpText>
        <label>Link to Map of Closing Documents</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Phase_I_ESA__c</fullName>
        <inlineHelpText>should be link to Box</inlineHelpText>
        <label>Link to Phase I ESA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Photos__c</fullName>
        <inlineHelpText>Enter the link to site photos from Box.com</inlineHelpText>
        <label>Link to Photos</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Pricing_Tool_on_box_com__c</fullName>
        <formula>Pricing_Tool_Approval__r.Link_to_Pricing_Tool_on_box_com__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the pricing tool on Box.com- pulled from the associated approved Pricing Tool</inlineHelpText>
        <label>Link to Pricing Tool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Redline_Contracts__c</fullName>
        <inlineHelpText>Enter the link to the Redline Contracts from Box.com
If they do not exist, enter N/A</inlineHelpText>
        <label>Link to Redline Contracts</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Scope_Documents__c</fullName>
        <formula>Pricing_Tool_Approval__r.Scope_Documents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Scope Documents from the associated approved Pricing Tool</inlineHelpText>
        <label>Link to Scope Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Signed_Lease_Option__c</fullName>
        <inlineHelpText>Enter the link to the signed lease option- ONLY REQ&apos;d IF DEVELOPMENT VSM - PPAs only - Not for Cash</inlineHelpText>
        <label>Link to Signed Lease Option</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Structural_Framing_Plans__c</fullName>
        <inlineHelpText>Required for East Coast Roof Mounts Only</inlineHelpText>
        <label>Link to Structural Framing Plans</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Title_Review__c</fullName>
        <inlineHelpText>Required for PPAs only - Not for Cash</inlineHelpText>
        <label>Link to Title Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_schedule_of_values__c</fullName>
        <label>Link to schedule of values</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_searchable_EPC_Contract__c</fullName>
        <label>Link to searchable EPC Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_searchable_version_of_final_MIPA__c</fullName>
        <label>Link to searchable version of final MIPA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Liquidated_Damages_Contract_Deadlines__c</fullName>
        <inlineHelpText>Identify any Liquidated Damages Contract Deadlines and Schedule Expectations as specified in the Contract</inlineHelpText>
        <label>LDs, Contract Deadlines, Schedule Expect</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MIPA_Contract_Amount__c</fullName>
        <label>MIPA Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MIPA_Contract_Milestone_Schedule_Non_IX__c</fullName>
        <description>Placeholder field for MIPA Contract Execution Story Improvements</description>
        <inlineHelpText>Indicate % of Contract / Non-IX Cash Recognition, Date, and Provide narrative if there is an earlier of condition for Milestone Payments</inlineHelpText>
        <label>MIPA Contract Milestone Schedule (Non-IX</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_EPC_to_hit_target_IRR__c</fullName>
        <label>Max EPC to hit target IRR?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Accepted_to_Meeting_Held__c</fullName>
        <formula>Date_Meeting_Held__c -  Date_Meeting_Accepted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between the date the meeting was held and date request was approved and status updated to meeting accepted.</inlineHelpText>
        <label>Meeting Accepted to Meeting Held</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meeting_Held_to_Kickoff_Completed__c</fullName>
        <formula>Date_Kickoff_Completed__c -  Date_Meeting_Held__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calcuates # of days between kickoff completed and date meeting was held</inlineHelpText>
        <label>Meeting Held to Kickoff Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ministerial_Permits_Approvals_Completion__c</fullName>
        <inlineHelpText>Expected completion date</inlineHelpText>
        <label>Ministerial Permits/Approvals Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ministerial_Permits_and_Approvals_Narrat__c</fullName>
        <inlineHelpText>Entitlement Development Plan - Ministerial Permits &amp; Approvals Narrative</inlineHelpText>
        <label>4a) Ministerial Entitlement Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ministerial_Permits_and_Approvals_Type_s__c</fullName>
        <inlineHelpText>Choose all applicable permits</inlineHelpText>
        <label>Ministerial Permits/Approvals Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Heritage</fullName>
                </value>
                <value>
                    <fullName>US Fish and Wildlife</fullName>
                </value>
                <value>
                    <fullName>SHPO</fullName>
                </value>
                <value>
                    <fullName>MHC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobilization_Date_from_Project__c</fullName>
        <formula>Project__r.SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mobilization date listed on the associated project</inlineHelpText>
        <label>Mobilization Date from Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Delivery_Date__c</fullName>
        <formula>Project__r.Module_Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NHESP_Letter__c</fullName>
        <description>box link for NHESP letter</description>
        <inlineHelpText>Paste box link for letter submitted to NHESP. All NY projects must submit and paste this letter to complete PB3. MA projects where NHESP is shown on project parcel must also submit and paste box link here.</inlineHelpText>
        <label>NHESP Letter</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>New_region_w_licensing_tax_implications__c</fullName>
        <description>Indicates whether O&amp;M contract includes an expansion to a new region that will require business, electrical or other licensing and/or have tax implications?</description>
        <inlineHelpText>Does this include an expansion to a new region that will require business, electrical or other licensing and/or have tax implications?</inlineHelpText>
        <label>New region w/licensing/tax implications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_IX_Dev_COGS__c</fullName>
        <description>Non-IX Dev COGS from Opportunity updated by flow</description>
        <inlineHelpText>Non-IX Dev COGS from Opportunity</inlineHelpText>
        <label>Non-IX Dev COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Ministerial_Permits_Approvals_Comple__c</fullName>
        <inlineHelpText>Expected completion date</inlineHelpText>
        <label>Non-Ministerial Permits/Approvals Compl.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Ministerial_Permits_and_Approvals_Na__c</fullName>
        <inlineHelpText>Entitlement Development Plan - Non-Ministerial Permits &amp; Approvals Narrative</inlineHelpText>
        <label>4b) Non-Ministerial Entitlement Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Ministerial_Permits_and_Approvals_Ty__c</fullName>
        <label>Non-Ministerial Permits/Approvals Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local Zoning</fullName>
                </value>
                <value>
                    <fullName>Local Planning Board</fullName>
                </value>
                <value>
                    <fullName>SEQR</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>ACOE</fullName>
                </value>
                <value>
                    <fullName>ConsCom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Development_Affiliate_Fee__c</fullName>
        <inlineHelpText>Additional fee to standard development fee</inlineHelpText>
        <label>Non-Std Development/Affiliate Fee ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_on_Non_standard_Scope_Items__c</fullName>
        <description>field to add notes regarding any deviations from a normal Borrego scope</description>
        <inlineHelpText>List any deviations from normal Borrego scope</inlineHelpText>
        <label>Notes on Non-standard Scope Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_Days_from_Cancellation_for_Conven__c</fullName>
        <description>note field for O&amp;M to indicuate How many days from when the issue notice of cancellation for convenience until it takes effect</description>
        <inlineHelpText>How many days from when the issue notice of cancellation for convenience until it takes effect</inlineHelpText>
        <label>Notice Days from Cancel for Convenience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_PB3_Approval_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sends alert to PB3 Approval Team via workflow</description>
        <inlineHelpText>Sends alert to PB3 Approval Team</inlineHelpText>
        <label>Notify PB3 Approval Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_Submit_Kickoff__c</fullName>
        <formula>IF( AND(ISPICKVAL( Kickoff_Submittal_Type__c , &quot;Standard&quot;), Pricing_Tool_Approval_Status__c &lt;&gt; &quot;Preliminary Approval&quot;, Pricing_Tool_Approval_Status__c &lt;&gt; &quot;Final Approval&quot;,Pricing_Tool_Approval_Status__c &lt;&gt; &quot;Approved&quot;), IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|12|l|FFFFFF|_|PRICING TOOL NOT APPROVED&quot;,&quot;PRICING TOOL NOT APPROVED&quot;), 

IF( AND(ISPICKVAL( Kickoff_Submittal_Type__c , &quot;Standard&quot;),Production_Modeling_Status__c &lt;&gt; &quot;Approved&quot;, Production_Modeling_Status__c &lt;&gt; &quot;Current Approved&quot;), 
IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|12|l|FFFFFF|_|PRODUCTION MODEL NOT APPROVED&quot;,&quot;PRODUCTION MODEL NOT APPROVED&quot;),

IF( AND(ISPICKVAL( Kickoff_Submittal_Type__c , &quot;Standard&quot;),  Products_Included__c  = &quot;No&quot;), 
IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|12|l|FFFFFF|_|PROJECT PRODUCTS NEED TO BE ADDED&quot;,&quot;PROJECT PRODUCTS NEED TO BE ADDED&quot;), 

&quot;YES&quot;
 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the Kickoff Submittal OK to Submit?</inlineHelpText>
        <label>OK to Submit Kickoff?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Contract_Approval_Status__c</fullName>
        <inlineHelpText>What is the status of O&amp;M Approval?</inlineHelpText>
        <label>OM Contract Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Contract_Length__c</fullName>
        <inlineHelpText>Enter the length of the OM contract. If no OM Contract exists, enter N/A</inlineHelpText>
        <label>OM Contract Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Contract_Value__c</fullName>
        <formula>Pricing_Tool_Approval__r.Opportunity__r.O_M_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>O&amp;M Contract Value from the associated Pricing Tool Approval</inlineHelpText>
        <label>OM Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_M_Annual_Contract_Value_kw__c</fullName>
        <description>pulled over from related opportunity ($/kw field)</description>
        <formula>Opportunity__r.kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulled over from related opportunity ($/kw field)</inlineHelpText>
        <label>O&amp;M Annual Contract Value ($/kw)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>O_M_Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>auto checks off when 2nd step of contract approval process is completed.</description>
        <inlineHelpText>auto checks off when 2nd step of contract approval process is completed.</inlineHelpText>
        <label>O&amp;M Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_M_Expectations__c</fullName>
        <description>text area to give more detail about O&amp;M Contract Value</description>
        <inlineHelpText>Explain whether there is, will be, or will not be an O&amp;M agreement.</inlineHelpText>
        <label>O&amp;M Expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_M_Portfolio_Size__c</fullName>
        <description>pulls O&amp;M portfolio size from related opportunity.</description>
        <formula>Opportunity__r.Portfolio_Size_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls O&amp;M portfolio size from related opportunity.</inlineHelpText>
        <label>O&amp;M Portfolio Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Price on Opportunity</inlineHelpText>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>pulls opportunity close date from related opportunity</description>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls opportunity close date from related opportunity</inlineHelpText>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT( Opportunity__r.StageName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>brings over current stage from opportunity</inlineHelpText>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Opportunity associated with the CC Submittal</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Contract_Specifics__c</fullName>
        <label>Other Contract Specifics</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <inlineHelpText>Required if Other is selected from list. Please enter the remaining development items not in the list</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_Issues__c</fullName>
        <inlineHelpText>If the kickoff has been held but there are outstanding issues, list therm here</inlineHelpText>
        <label>Outstanding Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Manager_s_Email__c</fullName>
        <inlineHelpText>Hidden field, shows the email of the createdby manager to be used in an email alert</inlineHelpText>
        <label>Owner Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Project__r.Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PB3_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Should not be on layout. Controlled by button and WF. When it is checked off it sends an email alert out</description>
        <inlineHelpText>Sends email alert out to PB3 Team.</inlineHelpText>
        <label>PB3 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PB3toWIP__c</fullName>
        <formula>Project__r.Date_Project_On_WIP_Status__c-Reporting_Date_PB3_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB3 to WIP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB7_Submittal_Date_from_Project__c</fullName>
        <label>PB7 Submittal Date from Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PB_Decision__c</fullName>
        <inlineHelpText>Link to final PB decision or site plan approval</inlineHelpText>
        <label>PB Decision</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PMAssigned__c</fullName>
        <formula>IF( CONTAINS(Project__r.Owner:User.UserRole.Name, &quot;Project Manager&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Assigned?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_CO_Total__c</fullName>
        <formula>Project__r.POCO_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Purchase Orders + Change Orders already on the Project
Reference for the CC to see how much has been spent to date</inlineHelpText>
        <label>PO &amp; CO Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSD_Revision_Link__c</fullName>
        <formula>&quot;https://na29.salesforce.com/&quot;&amp; PSD_Revision__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSD Revision Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSD_Revision_Status__c</fullName>
        <formula>TEXT( PSD_Revision__r.Revision_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the associated PSD Revision</inlineHelpText>
        <label>PSD Revision Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSD_Revision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated PSD Revision to the submittal, pulled from the Production Modeling</inlineHelpText>
        <label>PSD Revision from Production Model</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PSD_Revision__c.Pre_Sales_Design__r.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PSD_Revision__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSD_Revision_from_Pricing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>uses lookuphelper to pull the PSD Revision from the pricing request</description>
        <inlineHelpText>Pulls the PSD Revision from the associated pricing request</inlineHelpText>
        <label>PSD Revision from Pricing Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PSD_Revision__c.Pre_Sales_Design__r.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PSD_Revision__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSD_Revision_same_on_PT_Production__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(Production_Modeling__c),
        ISBLANK( Pricing_Tool_Approval__c)
    ),
    IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|12|l|FFFFFF|_|N/A&quot;, &quot;N/A&quot;),

    IF(
        AND(
            ISBLANK(Pricing_Tool_Approval__r.PSD_Revision__c),
            ISBLANK(Production_Modeling__r.PSD_Revision__c)
        ),        
        IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|12|l|FFFFFF|_|None Listed&quot;, &quot;None Listed&quot;),

        
            IF(
                AND(
                    Pricing_Tool_Approval__r.PSD_Revision_Link__c = Production_Modeling__r.PSD_Revision_Link__c        
                ), 
                IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=009900|12|l|FFFFFF|_|YES&quot;, &quot;YES&quot;),
                IMAGE(&quot;//chart.googleapis.com/chart?chst=d_text_outline&amp;chld=FF0000|12|l|FFFFFF|_|NO. PSD Rev is not the same on the PR %26 PM&quot;, &quot;NO&quot;)
            )
        )
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the PSD Revision listed on associated Pricing Request the same as the PSD Revision listed on associated Production Model.</inlineHelpText>
        <label>PSD Rev same on PR &amp; PM?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Date_from_Project__c</fullName>
        <formula>Project__r.PTO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>PTO date listed on the associated Project</inlineHelpText>
        <label>PTO Date from Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTRE__c</fullName>
        <inlineHelpText>Link toShana&apos;s Title review Analysis</inlineHelpText>
        <label>PTRE</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PV_Syst__c</fullName>
        <description>link to PV Syst documents</description>
        <inlineHelpText>link to PV Syst documents</inlineHelpText>
        <label>PV Syst</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Performance_Impact__c</fullName>
        <inlineHelpText>Estimated impact on energy generated by the system, compared to current products, including consideration of product efficiency, nominally and over the system lifetime.</inlineHelpText>
        <label>Performance Impact</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performance_or_Availability_Guarantee__c</fullName>
        <description>pulls from related opportunity field Performance Guarantee Included</description>
        <formula>TEXT(Opportunity__r.Performance_Guarantee_Included__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls from related opportunity</inlineHelpText>
        <label>Performance or Availability Guarantee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_costs_validated_with_the_town__c</fullName>
        <inlineHelpText>This comes from the Pricing Tool Approval field with the same name.</inlineHelpText>
        <label>Permit costs validated with the town?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase1ESA__c</fullName>
        <description>Paste Box Link for Phase 1 ESA</description>
        <inlineHelpText>Paste Box Link for Phase 1 ESA</inlineHelpText>
        <label>Phase 1 ESA</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Plan_for_Mitigating_Concerns__c</fullName>
        <inlineHelpText>What is the plan to mitigate concerns?</inlineHelpText>
        <label>Plan for Mitigating Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Closing_MIPA_Obligations_Narrative__c</fullName>
        <inlineHelpText>Describe Post-closing Contract Obligations, Revenue Recognition Reserves, Payment timing impact. Includes detail of Risk item, Description, Expected Impact ($) on Price, Max Impact on Price, and Expected Completion Date</inlineHelpText>
        <label>Post-Closing MIPA Obligations Narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prelim_Title_Search_Review_Complete__c</fullName>
        <inlineHelpText>N/A for Cash Jobs</inlineHelpText>
        <label>Prelim Title Search/Review Complete?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Present_State_of_SOV__c</fullName>
        <inlineHelpText>Explain in detail the current condition of the SOV</inlineHelpText>
        <label>Present State of SOV</label>
        <type>TextArea</type>
    </fields>
</CustomObject>